[package]
name = "password"
version = "0.1.0"
edition = "2021"
authors = ["Rhelvetican"]
description = "A simple password generator."
build = "build.rs"
keywords = ["password", "generator", "cli"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
winreg = "*"
ansi_term = "*"

[build-dependencies]
winres = "*"