[package]
name = "password"
version = "1.1.0"
edition = "2021"
authors = ["Rhelvetican"]
description = "A simple password generator."
build = "build.rs"
keywords = ["password", "generator", "cli"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
winreg = "*"
ansi_term = "*"

[build-dependencies]
winres = "*"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = "symbols"
debug-assertions = false
rpath = true
